--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: "20"
           cache: npm
-          cache-dependency-path: ./public-arte-hall-koushoin/package-lock.json
+          cache-dependency-path: ./public-arte-hall-koushoin/
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
