--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -64,7 +64,7 @@ jobs:
       # - name: Install dependencies
       #   run: npm install
       - name: Build with Next.js
-        run: npm next build
+        run: npm run build
         # run: pnpm run build
         env:
           PAGES_BASE_PATH: ${{ steps.setup_pages.outputs.base_path }}
