--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -65,7 +65,7 @@ jobs:
       #   run: npm install
       - name: Build with Next.js
         run: npm run build
-        # run: pnpm run build
+        working-directory: simple-arte-homepage
         env:
           PAGES_BASE_PATH: ${{ steps.setup_pages.outputs.base_path }}
       - name: Upload artifact
