--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -63,6 +63,7 @@ jobs:
           #   ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install dependencies
         run: npm install
+        working-directory: ./simple-arte-homepage
       - name: Build with Next.js
         run: npm run build
         working-directory: ./simple-arte-homepage
