--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -72,8 +72,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          include-hidden-files: true
-          path: ./out
+          path: ./simple-arte-homepage/out
 
   # Deployment job
   deploy:
