--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -55,9 +55,7 @@ jobs:
         run: npm install
         working-directory: ./simple-arte-homepage
       - name: Build with Next.js
-        run: |
-         npm run build
-         npm run export
+        run: npm run build
         working-directory: ./simple-arte-homepage
         env:
           PAGES_BASE_PATH: ${{ steps.setup_pages.outputs.base_path }}
@@ -79,4 +77,4 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Deploy to S3
-        run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }}
