--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,6 +57,8 @@ jobs:
       - name: Build with Next.js
         run: npm run build
         working-directory: ./simple-arte-homepage
+      - name: Debug Check output folder
+        run: ls -la ./simple-arte-homepage/out
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -75,4 +77,4 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Deploy to S3
-        run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        run: aws s3 sync ./simple-arte-homepage/out s3://${{ secrets.AWS_S3_BUCKET }} --delete
