--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -69,6 +69,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Debug list files
+        run: ls -la
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -77,5 +79,5 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Deploy to S3
-        working-directory: ./simple-arte-homepage
+        working-directory: simple-arte-homepage
         run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }} --delete
