--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -81,5 +81,4 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Deploy to S3
-        working-directory: simple-arte-homepage
-        run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        run: aws s3 sync simple-arte-homepage/out s3://${{ secrets.AWS_S3_BUCKET }} --delete
