--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -86,4 +86,4 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Deploy to S3
-        run: aws s3 sync ./simple-arte-homepage/out s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        run: aws s3 sync ./out s3://${{ secrets.AWS_S3_BUCKET }} --delete
