--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: github-pages
           path: simple-arte-homepage/out
       - name: Debug show project root
         run: ls -la
@@ -77,7 +78,7 @@ jobs:
           name: github-pages
           path: simple-arte-homepage
       - name: Debug list files
-        run: ls -la
+        run: ls -la ./simple-arte-homepage/out
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
