--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,14 +57,14 @@ jobs:
       - name: Build with Next.js
         run: npm run build
         working-directory: ./simple-arte-homepage
-      - name: Debug Check output folder
-        run: ls -la ./simple-arte-homepage/out
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: github-pages
           path: simple-arte-homepage/out
-      - name: Debug show project root
+      - name: Debug Upload folder
+        run: ls -la ./simple-arte-homepage/out
+      - name: Debug Project root
         run: ls -la
 
   # Deployment job
@@ -72,13 +72,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download exported site
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: github-pages
           path: simple-arte-homepage
       - name: Debug list files
-        run: ls -la ./simple-arte-homepage/out
+        run: ls -la simple-arte-homepage
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
